# Decentralized-Agent-Kit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.demo.yml  docker-compose.local-llm.yml  docker-compose.test.yml  docker-compose.yml  inspect_adk.py  test_mode_switch.py  verify_flow.sh  verify_provider_payment_enforcement.py  verify_scenario_1.py  verify_scenario_3.py  verify_scenario_4_a2a.py  verify_scenario_5_retry_prompt.py  verify_scenario_8_real_provider.py
.claude/: settings.json
.claude/commands/: add-skill.md  charter-review.md  run-eval.md  sync-feature.md  tech-watch.md  triage-deps.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dependency_update.yml  feature_request.yml  tech_watch_proposal.yml
.github/workflows/: capture-golden.yml  charter-review.yml  ci.yml  dependency-triage.yml  feature-sync.yml  labels.yml  nightly-eval.yml  project-autoadd.yml  tech-watch.yml
agent/: Dockerfile  README.md  agent_config.yaml  entrypoint.sh  inspect_llm_agent.py  pyproject.toml  validation_error.txt  verify_inheritance.py
agent/dak_agent/: a2a_peer_manager.py  adaptive_agent.py  agent.json  agent.py  builtin_tools.py  config.py  decorators.py  enforcer.py  enforcer_validator.py  errors.py  meta_llm.py  mode_manager.py  patches.py  remote_tools.py  sitecustomize.py  skill_registry.py  skill_tools.py  wallet_manager.py
agent/dak_agent/handlers/: payment_handler.py
agent/dak_agent/wallets/: base_wallet.py  solana_wallet.py
agent/provider_skills/premium_service/: SKILL.md  tools.py
agent/scripts/: analyze_langfuse.py  discover_endpoint.py
agent/scripts/manual/: verify_payment_session.py
agent/skills/: filesystem.yaml
agent/skills/dependency_maintenance/: SKILL.md  tools.py
agent/skills/filesystem/: SKILL.md
agent/skills/premium_service/: skill.yaml  tools.py
agent/skills/solana_wallet/: SKILL.md  __init__.py  skill.yaml  tools.py
agent/skills/symbol_wallet/: paid_tool.py  skill.yaml  tools.py
agent/tests/: test_adaptive_agent.py  test_adaptive_refinement.py  test_ap2_protocol.py  test_builtin_tools.py  test_config.py  test_enforcer_validator.py  test_generic_escape_hatch.py  test_meta_llm.py  test_mode_manager.py  test_payment_handler.py  test_real_skills_loading.py  test_skill_standard_repro.py  test_skill_tools.py  test_skills_integration.py  test_solana_wallet.py  test_tool_discovery_integration.py  test_ulysses_pact.py
agent/tests/scenarios/: verify_scenario_1.py  verify_scenario_3.py  verify_scenario_4_a2a.py  verify_scenario_5_retry_prompt.py
agent/tests/skills/: test_real_skills_loading.py  test_skill_discovery.py  test_skill_standard_repro.py  test_skills_integration.py
bff/: Dockerfile  main.py  pyproject.toml
bff/scripts/: verify_flow_bff.sh
bff/templates/: index.html
bff/tests/: test_main.py
cli/: README.md  pyproject.toml  test_mode_switch.py
cli/.dak/commands/: test.md
cli/src/: client.py  commands.py  config.py  main.py
cli/tests/: test_cli_mode_switch.py  test_client.py  test_config.py  test_main.py  test_mode_switch.py  test_mode_switch_integration.py  test_tool_discovery.py
docs/: CHARTER.md  agent_skills.md  bff_architecture.md  built_in_tools.md  dynamic_mode_switching.md  enforcer_mode.md  future_plan.md  quickstart.md  test_matrix.md
docs/architecture/: chat_history.md  overview.md
docs/eval/: README.md  history.jsonl
docs/experimental/: solana_integration.md  symbol_integration.md
docs/getting-started/: docker_deployment.md  installation.md  local_auth.md
docs/guides/: authentication_testing.md  cli_usage.md  mcp_integration.md
docs/maintenance/: DESIGN.md  README.md  architecture.drawio
evaluation/: README.md  confirm_test.yaml  evaluation_report.md  main.py  pyproject.toml  run_eval.py  scenarios.yaml  utils.py
maintenance/: README.md  pyproject.toml
maintenance/src/dak_maintenance/: __init__.py  changelog.py  charter.py  cli.py  decide.py  feature.py  jsonutil.py  llm_client.py  proposals.py  risk.py  search.py  semver.py  watch.py
maintenance/tests/: test_decide.py  test_feature.py  test_risk.py  test_search.py  test_semver.py  test_watch.py
mcp-server/: Dockerfile  README.md  main.py  pyproject.toml
mcp-server/scripts/: routes_dumper.py
mcp-server/tests/: test_tools.py
scripts/: smoke_local_llm.sh
tests/integration/: conftest.py  pyproject.toml  test_agent_basic.py  test_ap2_flow.py  test_bff.py  test_bff_ui.py  test_cli.py  test_enforcer_flow.py  test_golden_replay.py  test_mcp_server.py  test_skill_flow.py  test_smoke_real_llm.py
tests/integration/fake_llm/: Dockerfile  app.py
tests/integration/golden/: README.md  list_skills.json  skill_enable_read.json
tests/integration/tools/: capture_golden.py
ui/: .dockerignore  .env.example  .gitignore  package-lock.json  package.json
(+17 files in other folders)
