[project]
name = "dak-agent"
version = "0.1.0"
description = "Decentralized Agent Kit Agent with A2A and MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a]>=0.1.0",
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "openai>=2.8.1",
    "anthropic>=0.74.1",
    "pyjwt[crypto]>=2.10.1",
    "PyYAML>=6.0.1",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

