[project]
name = "bff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.22.0",
]
