[project]
name = "dak-cli"
version = "0.1.0"
description = "CLI tool for Decentralized Agent Kit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
dak-cli = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

