[project]
name = "dak-maintenance"
version = "0.1.0"
description = "Self-maintenance toolkit for Decentralized-Agent-Kit: dependency triage, risk assessment, and merge decisions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
dak-maint = "dak_maintenance.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dak_maintenance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
